--- a/Tienda-RipCurl/RipCurl/package.json
+++ b/Tienda-RipCurl/RipCurl/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.2",
     "bootstrap": "^5.3.3",
     "firebase": "^10.13.2",
     "react": "^18.3.1",
